Bug 159174 - CRASH pasting bitmap of empty Calc selection
Summary: CRASH pasting bitmap of empty Calc selection
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7....
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-14 06:16 UTC by Mike Kaganski
Modified: 2024-01-23 15:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["ScDocument::FillInfo(ScTableInfo &,short,long,short,long,short,double,double,bool,bool,ScMarkData const *)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-01-14 06:16:14 UTC
With a recent master build (including commit 3b10bbacb8a12a00c35683eeaae4a75046a84aac, to not interfere with tdf#159171 and tdf#151752):

1. Create a new empty Calc document;
2. Edit->Select->Select Unprotected Cells;
3. Ctrl+C;
4. Click on the small drop-down arrow of the Paste toolbar button;
5. Choose "Bitmap Image (BMP)"

=> Assertion failed, crash.
Comment 1 Mike Kaganski 2024-01-14 06:17:54 UTC
https://gerrit.libreoffice.org/c/core/+/162041
Comment 2 Commit Notification 2024-01-14 09:00:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b93cc83993b3cd78aa05556342839a21c96dc5a

tdf#159174: there may be no tabs in the clipboard document

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-15 12:34:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/41afcf4fa89abe23177e6a26d1a9e8611f351852

tdf#159174: there may be no tabs in the clipboard document

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2024-01-15 13:26:34 UTC
Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96493091a80fb01c33ea9153b737fdc554de61f0
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue!
Comment 5 Commit Notification 2024-01-15 15:23:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/12a2b1260dbcca2d99cc54d449cc914279ade43e

tdf#159174: there may be no tabs in the clipboard document

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-01-15 20:40:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3d4ee5ee34da11d3580f0b778406424556ed0ed6

tdf#159174: sc_uicalc: Add unittest

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-01-23 15:37:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/0fd7ede0fbf93c1c8e2baa95bc76ef9d8fbf3eb0

tdf#159174: there may be no tabs in the clipboard document

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.