tdf#159174: there may be no tabs in the clipboard document

Change-Id: I053d91bf44e39e14ade9face14084a107d0df898
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162041
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 0b93cc83993b3cd78aa05556342839a21c96dc5a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162092
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>